--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,7 @@
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/locationText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/image_placeholder"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/conditionGroup"
@@ -46,7 +45,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/temperature_placeholder"
             android:textSize="48sp"
             android:textColor="@color/white"/>
         <TextView
@@ -54,206 +52,162 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/info_placeholder"
             android:textSize="32sp"
             android:textColor="@color/white70"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/sunriseText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="80dp"
-        android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toStartOf="@id/sunriseImage"
+        app:layout_constraintTop_toTopOf="@id/sunriseImage"
+        android:text="@string/sunrise_text"
+        android:textColor="@color/white60"/>
+
+    <TextView
+        android:id="@+id/sunriseDataText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/sunriseText"
+        app:layout_constraintEnd_toEndOf="@id/sunriseText"
+        android:text="@string/info_placeholder"
+        android:textColor="@color/white70"
+        android:textStyle="bold"/>
+
+    <ImageView
+        android:id="@+id/sunriseImage"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="@id/verticalDivider1"
+        app:layout_constraintBottom_toBottomOf="@id/verticalDivider1"
+        app:layout_constraintEnd_toStartOf="@id/verticalDivider1"
+        android:src="@drawable/sunrise"/>
+
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/verticalDivider1"
+        android:layout_width="1dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintTop_toBottomOf="@id/conditionGroup"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical">
+        app:dividerColor="@color/grey"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/sunsetImage"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toTopOf="@id/verticalDivider1"
+        app:layout_constraintBottom_toBottomOf="@id/verticalDivider1"
+        app:layout_constraintStart_toEndOf="@id/verticalDivider1"
+        android:src="@drawable/sunset"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginEnd="5dp">
+    <TextView
+        android:id="@+id/sunsetText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@id/sunsetImage"
+        app:layout_constraintTop_toTopOf="@id/sunsetImage"
+        android:text="@string/sunset_text"
+        android:textColor="@color/white60"/>
 
-                <TextView
-                    android:id="@+id/sunriseText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
-                    app:layout_constraintEnd_toStartOf="@id/sunriseImage"
-                    app:layout_constraintTop_toTopOf="@id/sunriseImage"
-                    android:text="@string/sunrise_text"
-                    android:textColor="@color/white60"/>
+    <TextView
+        android:id="@+id/sunsetDataText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/sunsetText"
+        app:layout_constraintStart_toStartOf="@id/sunsetText"
+        android:text="@string/info_placeholder"
+        android:textColor="@color/white70"
+        android:textStyle="bold"/>
 
-                <TextView
-                    android:id="@+id/sunriseDataText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/sunriseText"
-                    app:layout_constraintEnd_toEndOf="@id/sunriseText"
-                    android:text="@string/info_placeholder"
-                    android:textColor="@color/white70"
-                    android:textStyle="bold"/>
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/horizontalDivider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="50dp"
+        app:layout_constraintTop_toBottomOf="@id/verticalDivider1"
+        app:dividerColor="@color/grey"/>
 
-                <ImageView
-                    android:id="@+id/sunriseImage"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:src="@drawable/sunrise"/>
+    <TextView
+        android:id="@+id/tempMinText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toStartOf="@id/tempMinImage"
+        app:layout_constraintTop_toTopOf="@id/tempMinImage"
+        android:text="@string/temp_min"
+        android:textColor="@color/white60"/>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tempMinDataText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tempMinText"
+        app:layout_constraintEnd_toEndOf="@id/tempMinText"
+        android:text="@string/info_placeholder"
+        android:textColor="@color/white70"
+        android:textStyle="bold"/>
 
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="10dp"
-                app:dividerColor="@color/grey"/>
+    <ImageView
+        android:id="@+id/tempMinImage"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="@id/verticalDivider2"
+        app:layout_constraintBottom_toBottomOf="@id/verticalDivider2"
+        app:layout_constraintEnd_toEndOf="@id/verticalDivider2"
+        android:src="@drawable/temp_min"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginStart="5dp">
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/verticalDivider2"
+        android:layout_width="1dp"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/horizontalDivider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:dividerColor="@color/grey"/>
 
-                <ImageView
-                    android:id="@+id/sunsetImage"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:src="@drawable/sunset"/>
+    <ImageView
+        android:id="@+id/tempMaxImage"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toTopOf="@id/verticalDivider2"
+        app:layout_constraintBottom_toBottomOf="@id/verticalDivider2"
+        app:layout_constraintStart_toStartOf="@id/verticalDivider2"
+        android:src="@drawable/temp_max"/>
 
-                <TextView
-                    android:id="@+id/sunsetText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginStart="10dp"
-                    app:layout_constraintStart_toEndOf="@id/sunsetImage"
-                    app:layout_constraintTop_toTopOf="@id/sunsetImage"
-                    android:text="@string/sunset_text"
-                    android:textColor="@color/white60"/>
+    <TextView
+        android:id="@+id/tempMaxText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@id/tempMaxImage"
+        app:layout_constraintTop_toTopOf="@id/tempMaxImage"
+        android:text="@string/temp_max"
+        android:textColor="@color/white60"/>
 
-                <TextView
-                    android:id="@+id/sunsetDataText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/sunsetText"
-                    app:layout_constraintStart_toStartOf="@id/sunsetText"
-                    android:text="@string/info_placeholder"
-                    android:textColor="@color/white70"
-                    android:textStyle="bold"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </LinearLayout>
-
-        <com.google.android.material.divider.MaterialDivider
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginVertical="10dp"
-            app:dividerColor="@color/grey"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginEnd="5dp">
-
-                <TextView
-                    android:id="@+id/tempMinText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
-                    app:layout_constraintEnd_toStartOf="@id/tempMinImage"
-                    app:layout_constraintTop_toTopOf="@id/tempMinImage"
-                    android:text="@string/temp_min"
-                    android:textColor="@color/white60"/>
-
-                <TextView
-                    android:id="@+id/tempMinDataText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/tempMinText"
-                    app:layout_constraintEnd_toEndOf="@id/tempMinText"
-                    android:text="@string/info_placeholder"
-                    android:textColor="@color/white70"
-                    android:textStyle="bold"/>
-
-                <ImageView
-                    android:id="@+id/tempMinImage"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:src="@drawable/temp_min"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="10dp"
-                app:dividerColor="@color/grey"/>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginStart="5dp">
-
-                <ImageView
-                    android:id="@+id/tempMaxImage"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:src="@drawable/temp_max"/>
-
-                <TextView
-                    android:id="@+id/tempMaxText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginStart="10dp"
-                    app:layout_constraintStart_toEndOf="@id/tempMaxImage"
-                    app:layout_constraintTop_toTopOf="@id/tempMaxImage"
-                    android:text="@string/temp_max"
-                    android:textColor="@color/white60"/>
-
-                <TextView
-                    android:id="@+id/tempMaxDataText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/tempMaxText"
-                    app:layout_constraintStart_toStartOf="@id/tempMaxText"
-                    android:text="@string/info_placeholder"
-                    android:textColor="@color/white70"
-                    android:textStyle="bold"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tempMaxDataText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tempMaxText"
+        app:layout_constraintStart_toStartOf="@id/tempMaxText"
+        android:text="@string/info_placeholder"
+        android:textColor="@color/white70"
+        android:textStyle="bold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
