--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,12 +5,16 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.WeatherApp" parent="Base.Theme.WeatherApp" />
+    <style name="Theme.WeatherApp" parent="Base.Theme.WeatherApp" >
+        <item name="colorPrimary">@color/teal</item>
+        <item name="colorSecondary">@color/black</item>
 
-    <style name="Theme.WeatherApp.Splashscreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@drawable/home_screen_background_drawable</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
         <item name="windowSplashScreenAnimationDuration">2000</item>
         <item name="postSplashScreenTheme">@style/Theme.WeatherApp</item>
+
+        <item name="android:navigationBarColor">@color/black</item>
     </style>
+
 </resources>
