--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/locationText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/condition_description"/>
 
     <LinearLayout
         android:id="@+id/conditionGroup"
@@ -87,6 +88,7 @@
         app:layout_constraintTop_toTopOf="@id/verticalDivider1"
         app:layout_constraintBottom_toBottomOf="@id/verticalDivider1"
         app:layout_constraintEnd_toStartOf="@id/verticalDivider1"
+        android:contentDescription="@string/sunrise_description"
         android:src="@drawable/sunrise"/>
 
     <com.google.android.material.divider.MaterialDivider
@@ -107,6 +109,7 @@
         app:layout_constraintTop_toTopOf="@id/verticalDivider1"
         app:layout_constraintBottom_toBottomOf="@id/verticalDivider1"
         app:layout_constraintStart_toEndOf="@id/verticalDivider1"
+        android:contentDescription="@string/sunset_description"
         android:src="@drawable/sunset"/>
 
     <TextView
@@ -168,6 +171,7 @@
         app:layout_constraintTop_toTopOf="@id/verticalDivider2"
         app:layout_constraintBottom_toBottomOf="@id/verticalDivider2"
         app:layout_constraintEnd_toEndOf="@id/verticalDivider2"
+        android:contentDescription="@string/temp_min_description"
         android:src="@drawable/temp_min"/>
 
     <com.google.android.material.divider.MaterialDivider
@@ -189,6 +193,7 @@
         app:layout_constraintTop_toTopOf="@id/verticalDivider2"
         app:layout_constraintBottom_toBottomOf="@id/verticalDivider2"
         app:layout_constraintStart_toStartOf="@id/verticalDivider2"
+        android:contentDescription="@string/temp_max_description"
         android:src="@drawable/temp_max"/>
 
     <TextView
