--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,219 +3,239 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-<androidx.constraintlayout.widget.ConstraintLayout
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@drawable/home_screen_background_drawable">
 
-    <TextView
-        android:id="@+id/locationText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/location_placeholder"
-        android:textSize="30sp"
-        android:textColor="@color/white70"
-        app:drawableStartCompat="@drawable/location_on"
-        app:drawableTint="@color/white70" />
-
-    <ImageView
-        android:id="@+id/conditionImage"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/locationText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/condition_description"/>
-
-    <LinearLayout
-        android:id="@+id/conditionGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        app:layout_constraintTop_toBottomOf="@id/conditionImage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/temperatureText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="48sp"
-            android:textColor="@color/white"/>
-        <TextView
-            android:id="@+id/conditionText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="32sp"
-            android:textColor="@color/white70"/>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/sunriseText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@id/sunriseImage"
-        app:layout_constraintTop_toTopOf="@id/sunriseImage"
-        android:text="@string/sunrise_text"
-        android:textColor="@color/white60"/>
-
-    <TextView
-        android:id="@+id/sunriseDataText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/sunriseText"
-        app:layout_constraintEnd_toEndOf="@id/sunriseText"
-        android:text="@string/info_placeholder"
-        android:textColor="@color/white70"
-        android:textStyle="bold"/>
-
-    <ImageView
-        android:id="@+id/sunriseImage"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="@id/verticalDivider1"
-        app:layout_constraintBottom_toBottomOf="@id/verticalDivider1"
-        app:layout_constraintEnd_toStartOf="@id/verticalDivider1"
-        android:contentDescription="@string/sunrise_description"
-        android:src="@drawable/sunrise"/>
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/verticalDivider1"
-        android:layout_width="1dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintTop_toBottomOf="@id/conditionGroup"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:dividerColor="@color/grey"/>
-
-    <ImageView
-        android:id="@+id/sunsetImage"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="@id/verticalDivider1"
-        app:layout_constraintBottom_toBottomOf="@id/verticalDivider1"
-        app:layout_constraintStart_toEndOf="@id/verticalDivider1"
-        android:contentDescription="@string/sunset_description"
-        android:src="@drawable/sunset"/>
-
-    <TextView
-        android:id="@+id/sunsetText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toEndOf="@id/sunsetImage"
-        app:layout_constraintTop_toTopOf="@id/sunsetImage"
-        android:text="@string/sunset_text"
-        android:textColor="@color/white60"/>
-
-    <TextView
-        android:id="@+id/sunsetDataText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/sunsetText"
-        app:layout_constraintStart_toStartOf="@id/sunsetText"
-        android:text="@string/info_placeholder"
-        android:textColor="@color/white70"
-        android:textStyle="bold"/>
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/horizontalDivider"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="50dp"
-        app:layout_constraintTop_toBottomOf="@id/verticalDivider1"
-        app:dividerColor="@color/grey"/>
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tempMinText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@id/tempMinImage"
-        app:layout_constraintTop_toTopOf="@id/tempMinImage"
-        android:text="@string/temp_min"
-        android:textColor="@color/white60"/>
+        <TextView
+            android:id="@+id/locationText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/location_placeholder"
+            android:textSize="30sp"
+            android:textColor="@color/white70"
+            app:drawableStartCompat="@drawable/location_on"
+            app:drawableTint="@color/white70" />
 
-    <TextView
-        android:id="@+id/tempMinDataText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tempMinText"
-        app:layout_constraintEnd_toEndOf="@id/tempMinText"
-        android:text="@string/info_placeholder"
-        android:textColor="@color/white70"
-        android:textStyle="bold"/>
+        <ImageView
+            android:id="@+id/conditionImage"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@id/locationText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/condition_description"/>
 
-    <ImageView
-        android:id="@+id/tempMinImage"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="@id/verticalDivider2"
-        app:layout_constraintBottom_toBottomOf="@id/verticalDivider2"
-        app:layout_constraintEnd_toEndOf="@id/verticalDivider2"
-        android:contentDescription="@string/temp_min_description"
-        android:src="@drawable/temp_min"/>
+        <LinearLayout
+            android:id="@+id/conditionGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            app:layout_constraintTop_toBottomOf="@id/conditionImage"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/temperatureText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="48sp"
+                android:textColor="@color/white"/>
+            <TextView
+                android:id="@+id/conditionText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="32sp"
+                android:textColor="@color/white70"/>
+        </LinearLayout>
 
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/verticalDivider2"
-        android:layout_width="1dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/horizontalDivider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:dividerColor="@color/grey"/>
+        <TextView
+            android:id="@+id/sunriseText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toStartOf="@id/sunriseImage"
+            app:layout_constraintTop_toTopOf="@id/sunriseImage"
+            android:text="@string/sunrise_text"
+            android:textColor="@color/white60"/>
 
-    <ImageView
-        android:id="@+id/tempMaxImage"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="@id/verticalDivider2"
-        app:layout_constraintBottom_toBottomOf="@id/verticalDivider2"
-        app:layout_constraintStart_toStartOf="@id/verticalDivider2"
-        android:contentDescription="@string/temp_max_description"
-        android:src="@drawable/temp_max"/>
+        <TextView
+            android:id="@+id/sunriseDataText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/sunriseText"
+            app:layout_constraintEnd_toEndOf="@id/sunriseText"
+            android:text="@string/info_placeholder"
+            android:textColor="@color/white70"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/tempMaxText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toEndOf="@id/tempMaxImage"
-        app:layout_constraintTop_toTopOf="@id/tempMaxImage"
-        android:text="@string/temp_max"
-        android:textColor="@color/white60"/>
+        <ImageView
+            android:id="@+id/sunriseImage"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toTopOf="@id/verticalDivider1"
+            app:layout_constraintBottom_toBottomOf="@id/verticalDivider1"
+            app:layout_constraintEnd_toStartOf="@id/verticalDivider1"
+            android:contentDescription="@string/sunrise_description"
+            android:src="@drawable/sunrise"/>
 
-    <TextView
-        android:id="@+id/tempMaxDataText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tempMaxText"
-        app:layout_constraintStart_toStartOf="@id/tempMaxText"
-        android:text="@string/info_placeholder"
-        android:textColor="@color/white70"
-        android:textStyle="bold"/>
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/verticalDivider1"
+            android:layout_width="1dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="80dp"
+            app:layout_constraintTop_toBottomOf="@id/conditionGroup"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:dividerColor="@color/grey"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/sunsetImage"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintTop_toTopOf="@id/verticalDivider1"
+            app:layout_constraintBottom_toBottomOf="@id/verticalDivider1"
+            app:layout_constraintStart_toEndOf="@id/verticalDivider1"
+            android:contentDescription="@string/sunset_description"
+            android:src="@drawable/sunset"/>
+
+        <TextView
+            android:id="@+id/sunsetText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toEndOf="@id/sunsetImage"
+            app:layout_constraintTop_toTopOf="@id/sunsetImage"
+            android:text="@string/sunset_text"
+            android:textColor="@color/white60"/>
+
+        <TextView
+            android:id="@+id/sunsetDataText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/sunsetText"
+            app:layout_constraintStart_toStartOf="@id/sunsetText"
+            android:text="@string/info_placeholder"
+            android:textColor="@color/white70"
+            android:textStyle="bold"/>
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/horizontalDivider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="50dp"
+            app:layout_constraintTop_toBottomOf="@id/verticalDivider1"
+            app:dividerColor="@color/grey"/>
+
+        <TextView
+            android:id="@+id/tempMinText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toStartOf="@id/tempMinImage"
+            app:layout_constraintTop_toTopOf="@id/tempMinImage"
+            android:text="@string/temp_min"
+            android:textColor="@color/white60"/>
+
+        <TextView
+            android:id="@+id/tempMinDataText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tempMinText"
+            app:layout_constraintEnd_toEndOf="@id/tempMinText"
+            android:text="@string/info_placeholder"
+            android:textColor="@color/white70"
+            android:textStyle="bold"/>
+
+        <ImageView
+            android:id="@+id/tempMinImage"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toTopOf="@id/verticalDivider2"
+            app:layout_constraintBottom_toBottomOf="@id/verticalDivider2"
+            app:layout_constraintEnd_toEndOf="@id/verticalDivider2"
+            android:contentDescription="@string/temp_min_description"
+            android:src="@drawable/temp_min"/>
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/verticalDivider2"
+            android:layout_width="1dp"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/horizontalDivider"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:dividerColor="@color/grey"/>
+
+        <ImageView
+            android:id="@+id/tempMaxImage"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintTop_toTopOf="@id/verticalDivider2"
+            app:layout_constraintBottom_toBottomOf="@id/verticalDivider2"
+            app:layout_constraintStart_toStartOf="@id/verticalDivider2"
+            android:contentDescription="@string/temp_max_description"
+            android:src="@drawable/temp_max"/>
+
+        <TextView
+            android:id="@+id/tempMaxText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toEndOf="@id/tempMaxImage"
+            app:layout_constraintTop_toTopOf="@id/tempMaxImage"
+            android:text="@string/temp_max"
+            android:textColor="@color/white60"/>
+
+        <TextView
+            android:id="@+id/tempMaxDataText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tempMaxText"
+            app:layout_constraintStart_toStartOf="@id/tempMaxText"
+            android:text="@string/info_placeholder"
+            android:textColor="@color/white70"
+            android:textStyle="bold"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <FrameLayout
+        android:id="@+id/bottomSheet"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        style="@style/Widget.Material3.BottomSheet">
+
+        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </FrameLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
