--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.WeatherApp" parent="Theme.AppCompat.NoActionBar">
+    <style name="Theme.WeatherApp" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/teal</item>
         <item name="android:navigationBarColor">@color/black</item>
     </style>
 
-    <style name="Theme.WeatherApp.Splashscreen" parent="Theme.AppCompat.NoActionBar" >
+    <style name="Theme.WeatherApp.Splashscreen" parent="Theme.Material3.DayNight.NoActionBar" >
         <item name="windowSplashScreenBackground">@drawable/home_screen_background_drawable</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
         <item name="windowSplashScreenAnimationDuration">2000</item>
